# SVP

./: Krestiki_noliki_s_otrisovkoy.docx
TicTacToe/: CMakeLists.txt
TicTacToe/src/: CMakeLists.txt  gameboard.cpp
TicTacToe/src/headers/: gameboard.h  mainwindow.h
TicTacToe/src/sources/: gameboard.cpp  gamelogic.cpp  mainwindow.cpp
TicTacToe/tests/: CMakeLists.txt
TicTacToe/tests/sources/: test_gamelogic.cpp
src/: gamelogic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_gameboard.cpp
